force-app/main/default/objects/Pricebook2/fields/Combined_Desc__c.field-meta.xml
<CustomField>
    <fullName>Combined_Desc__c</fullName>
    <label>Combined Desc</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>