force-app/main/default/objects/Pricebook2/fields/Dan360_ByPassApex__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ByPassApex__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para pasar la validacion desde apex</description>
    <label>Dan360_ByPassApex</label>
    <type>Checkbox</type>
</CustomField>