force-app/main/default/objects/Pricebook2/fields/Dan360_CustomerSalesArea__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CustomerSalesArea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Sales Area</label>
    <referenceTo>Dan360_CustomerSalesArea__c</referenceTo>
    <relationshipLabel>Listas de precios</relationshipLabel>
    <relationshipName>Listas_de_precios</relationshipName>
    <type>Lookup</type>
</CustomField>