force-app/main/default/objects/Pricebook2/fields/Dan360_Editable__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para saber si la lista puede ser editada o no.</description>
    <label>Dan360_Editable</label>
    <type>Checkbox</type>
</CustomField>