force-app/main/default/objects/Pricebook2/fields/Dan360_LastModSap__c.field-meta.xml
<CustomField>
    <fullName>Dan360_LastModSap__c</fullName>
    <description>Fecha de la ultima actualización de los precios.</description>
    <label>Dan360_LastModSap</label>
    <type>DateTime</type>
</CustomField>