force-app/main/default/objects/Pricebook2/fields/Dan360_UnidadDeNegocio__c.field-meta.xml
<CustomField>
    <fullName>Dan360_UnidadDeNegocio__c</fullName>
    <label>Unidad de Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dan360_UnidadDeNegocio</valueSetName>
    </valueSet>
</CustomField>