force-app/main/default/objects/Pricebook2/fields/Disc_header_quailifier_Id__c.field-meta.xml
<CustomField>
    <fullName>Disc_header_quailifier_Id__c</fullName>
    <label>Disc header quailifier Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>