force-app/main/default/objects/Pricebook2/fields/Disc_list_name__c.field-meta.xml
<CustomField>
    <fullName>Disc_list_name__c</fullName>
    <label>Disc list name</label>
    <length>240</length>
    <type>Text</type>
</CustomField>