force-app/main/default/objects/Pricebook2/fields/Id_lista_combinada__c.field-meta.xml
<CustomField>
    <fullName>Id_lista_combinada__c</fullName>
    <externalId>true</externalId>
    <label>Id lista combinada</label>
    <length>30</length>
    <type>Text</type>
</CustomField>