force-app/main/default/objects/Pricebook2/fields/Id_lista_de_precios__c.field-meta.xml
<CustomField>
    <fullName>Id_lista_de_precios__c</fullName>
    <externalId>true</externalId>
    <label>Id lista de precios</label>
    <length>15</length>
    <type>Text</type>
</CustomField>