force-app/main/default/objects/Pricebook2/fields/Price_list_name__c.field-meta.xml
<CustomField>
    <fullName>Price_list_name__c</fullName>
    <label>Price list name</label>
    <length>240</length>
    <type>Text</type>
</CustomField>