force-app/main/default/objects/Pricebook2/listViews/Dan360_ListasPreciosAMN.listView-meta.xml
<ListView>
    <fullName>Dan360_ListasPreciosAMN</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Listas de precios AMN</label>
</ListView>